--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ NODE_ENV=development
 MAILTRAP_TOKEN=d5b2ab6db8b5aea483f3376fcf1ce950
 MAILTRAP_ENDPOINT=https://send.api.mailtrap.io/
 
-CLIENT_URL= http://localhost:5173
+CLIENT_URL= https://auth-healthcheckpro.onrender.com
